chore: initial attempt at deploying
